--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,15 @@
+black==23.1.0
 click==8.1.3
 Flask==2.2.3
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
+mypy-extensions==1.0.0
+packaging==23.0
+pathspec==0.11.0
+platformdirs==3.1.1
+PyMySQL==1.0.2
+SQLAlchemy==2.0.6
+tomli==2.0.1
+typing-extensions==4.5.0
 Werkzeug==2.2.3
